fixed privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -98,6 +98,6 @@
     <p>We may update this Privacy Policy from time to time. We will notify users of any material changes through the Chrome Web Store or extension updates.</p>
 
     <h2>11. Contact Information</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: [Your Contact Email]</p>
+    <p>If you have any questions about this Privacy Policy, please contact us at: [y.krzyw@gmail.com]</p>
 </body>
 </html>
